--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
+### Terraform ###
 # Compiled files
 *.tfstate
 *.tfstate.backup
 
 # Module directory
 .terraform/
+
+### Terraform Patch ###
+*.tfvars
+
+### Payload ###
+payload/
+
+### Backups ###
+*.old
+*.bak
